# riscyv02-sky

./: .gitignore  README.md  info.yaml
docs/: code-comparison.md  info.md  sram-analysis.md
firmware/: CMakeLists.txt  main.c  tt_pins.h  upload.py
src/: config.json  latch_sim.v  project.v  riscyv02_alu.v  riscyv02_execute.v  riscyv02_fetch.v  riscyv02_regfile.v  riscyv02_shifter.v  timing.sdc  tt_um_riscyv02_demux.v
test/: Makefile  asm.py  bisect_fmax.sh  emu.py  fuzz_parallel.py  metrics.py  riscyv02_sim.py  tb.v  test_alu.py  test_control.py  test_cycles.py  test_fuzz.py  test_helpers.py  test_interrupts.py  test_memory.py  test_overlap.py  test_reset.py  transistor_count.py
